--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: window_decorations
 description: A package which provides most of the window decorations from linux themes.
-version: 0.3.0+1
+version: 0.4.0
 homepage: https://github.com/prateekmedia/window_decorations
 
 environment:
