--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: window_decorations
 description: A package which provides most of the window decorations from linux themes.
-version: 0.5.5
+version: 0.9.0
 homepage: https://github.com/prateekmedia/window_decorations
 
 environment:
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.22.0
-  gsettings: ">=0.1.2+1 <1.0.0"
+  gsettings: ">=0.2.0 <1.0.0"
 
 dev_dependencies:
   flutter_test:
