--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dbus: ">=0.6.3 <1.0.0"
   flutter_svg: ^0.22.0
   gsettings: ">=0.2.0 <1.0.0"
 
