--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: window_decorations
 description: A package which provides most of the window decorations from linux themes.
-version: 0.9.5
+version: 0.9.8
 homepage: https://github.com/prateekmedia/window_decorations
 
 environment:
@@ -11,7 +11,7 @@ dependencies:
   flutter:
     sdk: flutter
   dbus: ">=0.6.3 <1.0.0"
-  flutter_svg: ^0.22.0
+  flutter_svg: ">=0.23.0+1 <1.0.0"
   gsettings: ">=0.2.0 <1.0.0"
 
 dev_dependencies:
