--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: window_decorations
 description: A package which provides most of the window decorations from linux themes.
-version: 0.9.8
+version: 1.0.0
 homepage: https://github.com/prateekmedia/window_decorations
 
 environment:
@@ -10,9 +10,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  dbus: ">=0.6.3 <1.0.0"
-  flutter_svg: ">=0.23.0+1 <1.0.0"
-  gsettings: ">=0.2.0 <1.0.0"
+  dbus: ">=0.6.6 <1.0.0"
+  flutter_svg: ">=1.0.0 <2.0.0"
+  gsettings: ">=0.2.1 <1.0.0"
 
 dev_dependencies:
   flutter_test:
