--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,19 @@
 name: window_decorations
 description: A package which provides most of the window decorations from linux themes.
-version: 2.0.0
+version: 2.0.0+1
 homepage: https://github.com/prateekmedia/window_decorations
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=1.17.0"
+
+platforms:
+  android:
+  ios:
+  linux:
+  macos:
+  web:
+  windows:
 
 dependencies:
   change_case: ">=1.0.1 < 2.0.0"
