--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: window_decorations
 description: A package which provides most of the window decorations from linux themes.
-version: 2.0.2
+version: 2.0.2+1
 homepage: https://github.com/prateekmedia/window_decorations
 
 environment:
