--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -11,8 +11,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  window_decorations:
+  titlebar_buttons:
     path: ../
 
 dev_dependencies:
