--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: window_decorations
-description: A package which provides most of the window decorations from linux themes.
-version: 2.0.2+1
-homepage: https://github.com/prateekmedia/window_decorations
+name: titlebar_buttons
+description: A package which provides most of the titlebar buttons from windows, linux and macos.
+version: 1.0.0
+homepage: https://github.com/gtk-flutter/titlebar_buttons
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
